feat(design-system): add apex-design-system.css and link in base template

--- a/src/dashboard/templates/base.html
+++ b/src/dashboard/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Apex Trading{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/apex-design-system.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     {% block head_extra %}{% endblock %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
